@@ -2,6 +2,7 @@ ChangeLog
 
 Upcoming version
 [BUGFIX]  Fix cropping if "resultChars" is empty. Thanks to Andreas Kießling. https://github.com/tpwd/ke_search/issues/242
+[BUGFIX]  Fix regression in page indexer if translated page is not available. Thanks to Jens Vollmer. https://github.com/tpwd/ke_search/issues/243
 
 Version 5.5.1, 16 August 2024
 [FEATURE] Add garbage collection for statistics table
